Fixed bug #48788 (RecursiveDirectoryIterator doesn't descend into symlinked directories).

[DOC]

To avoid breaking how existing code works a new constant is introduced for
the RecursiveDirectoryIterator() that directs the code to follow symlinks.
This constant RecursiveDirectoryIterator::FOLLOW_SYMLINKS can be passed a
flag to the constructor to trigger symlink following.